# TDT4102

./: .gitignore  README.md
inspera1/: ContractDataBase.cpp  InsuranceContract.cpp  Utilities.cpp  main.cpp  test.txt
oving0/1.1/: main.cpp  meson.build
oving0/1.3/: main.cpp
oving0/1.4/: main.cpp  meson.build  subprojects
oving1/: main.cpp  task1.py
oving10/: MinesweeperWindow.cpp  MinesweeperWindow.h  Tile.cpp  Tile.h
oving11/: linkedlist.cpp  linkedlist.hpp  main.cpp  person.cpp  person.hpp  test.cpp  test.hpp  utils.cpp  utils.hpp
oving2/: header.hpp  main.cpp  meson.build  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
oving3/: cannonball.cpp  cannonball.hpp  main.cpp  meson.build  utils.cpp  utils.hpp
oving4/: main.cpp  masterVisual.cpp  masterVisual.h  mastermind.cpp  mastermind.hpp  tekst.txt  tests.cpp  tests.hpp  utils.cpp  utils.hpp
oving5/: blackjack.cpp  blackjack.hpp  card.cpp  card.hpp  carddeck.cpp  carddeck.hpp  main.cpp  utils.cpp  utils.hpp
oving6/: coursecatalog.cpp  coursecatalog.hpp  courses.csv  file.cpp  file.hpp  main.cpp  task2b.txt  temps.cpp  temps.hpp  test.cpp  test.hpp  test.txt
oving7/: Emoji.cpp  Emoji.h  animal.cpp  animal.hpp  main.cpp  test.cpp  test.hpp  text.txt
oving8/: fib.cpp  fib.hpp  main.cpp  matrix.cpp  matrix.hpp
oving9/: car.cpp  car.hpp  main.cpp  meeting.cpp  meeting.hpp  meetingwindow.cpp  meetingwindow.hpp  person.cpp  person.hpp
